@@ -1,0 +1,1 @@
+This file keeps the home-dir/.gnupg directory around
