@@ -35,6 +35,9 @@ Changes in the next release:
   was disabled in an earlier release as it was showing a problem with zmk
   that was not understood at the time.
 
+* The Tarball.Src module only signs the release if both GPG and GPG keys are
+  available.
+
 Changes in 0.3.8:
 
 * The release archive now contains the full collection of test files.
